Fix Layout Bug

--- a/src/Main.css
+++ b/src/Main.css
@@ -37,7 +37,7 @@
 
 .page-layout {
   width: 100%;
-  max-width: 900px;
+  max-width: 1200px;
   height: 100%;
   display: flex;
   flex-direction: column;
